rewrite of the original api using updated libs, functions, package versions, etc
