# src/main/java/sample/api/stocks/repositories/StockRepository.java
@@ -1,8 +1,8 @@
-package sample.api.stock.repositories;
+package sample.api.stocks.repositories;
 
 import org.springframework.data.mongodb.repository.MongoRepository;
 import org.springframework.stereotype.Repository;
-import sample.api.stock.models.Stock;
+import sample.api.stocks.models.Stock;
 
 @Repository
 public interface StockRepository extends MongoRepository<Stock, String> {
